got delete button working

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/newModelButton"
+        android:id="@+id/deleteObjects"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -47,7 +47,7 @@
         app:icon="@drawable/ic_anchor"
         app:iconGravity="textStart"
         app:iconTint="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@id/newModelButton"
+        app:layout_constraintBottom_toTopOf="@id/deleteObjects"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
